<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <Button   android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Inicio_button_text1"
        android:onClick="info_iuv"
        android:id="@+id/i_info_iuv"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Inicio_button_text2"
        android:onClick="info_fototipos"
        android:id="@+id/i_info_foto"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Inicio_button_text3"
        android:onClick="info_fps"
        android:id="@+id/i_info_fps"/>

</LinearLayout>